--- a/program-information/modules/ROOT/pages/degrees-certificates.adoc
+++ b/program-information/modules/ROOT/pages/degrees-certificates.adoc
@@ -1,129 +1,54 @@
 = Degrees and Certificates
 
-Like most IT departments Inver Hills Community College divides offerings related to computers into two broad areas (though there is some crossover), information technology infrastructure and programming. There are two degrees and six certificates in the information technology infrastructure area and two degrees in the programming area. Networking, Internet access, server administration, hardware, operating systems, and PCs tend to fall in the information technology infrastructure area. Writing software, apps, sofware design, and algorithms tend to fall into the computer science/programming area.
+Like most IT departments Inver Hills Community College divides offerings related to computers into two broad areas (though there is some crossover), information technology infrastructure and computer science or programming. There are two degrees and six certificates in the information technology infrastructure area and two degrees in the programming area. Networking, Internet access, server administration, hardware, operating systems, and PCs tend to fall in the information technology infrastructure area. Writing software, apps, sofware design, and algorithms tend to fall into the computer science/programming area.
+
+Before making a decision on what specific certificate or degree you want to pursue you'll want to figure out whether the broad area of IT Infrastructure or Computer Science is more interesting to you.
 
 == Information Technology Infrastructure
 
-IT infrastructure personnel are responsible for installing, configuring, operating, and maintaining PCs, servers, network devices, network links, and cybersecurity devices and software required for businesses to operate.
+Information Technology Infrastructure, commonly called IT, is the collection of careers which deal with selecting, installing, integrating, protecting, and maintaining the software and hardware which enables society, business, and the Internet as we know it. This field focuses primarily on the integration of multiple existing hardware and software systyems into a single cohesive design solution to complex problems.
 
-Many of the classes in our degrees and certificates are aligned with professional industry certifications. If you already have one or more of these certifications you may be able to receive credit for courses. Review the xref:certification-credit.adoc[ITC Course Credit Equivalency for IT Exams] chart and then contact a faculty member for more information.
+xref:degrees-certificates-it.adoc[Find out about information technology infrastructure certificates and degrees here]
 
-[WARNING]
-.Course Order
-====
-Many of the courses in ITC degree programs have prerequisites which effectively limit the number of technical courses which can be take in any one semester. In order to ensure timely graduation, appropriate course loads, and the correct mix of technical and liberal arts courses students are strongly encouraged to meet with an academic advisor, counselor, and having that plan reviewed by a faculty member from the ITC department before registering for classes to determine a degree plan. You can also  xref:degree-course-sequencing.adoc[review a suggested course sequence online] to give you a starting point.
-====
+=== Key Skills
 
-=== Certificate: IT Helpdesk and Cybersecurity Operations - 18 Credits
+* Select and combine multiple technologies to solve problems
+* Defend systems and networks from cyber-attacks
+* Build, upgrade, and repair computers and other hardware
+* Help others by quickly solving their critical technology needs
+* Design, setup, and maintain the systems that run the Internet
+* Work with powerful networks, servers, firewalls, and more
 
-.Find out more about this certificate
-[%collapsible]
-====
-*Official Description:* This certificate provides the knowledge and skills for employment in entry-level positions in the information technology field that support security operations center and technology end-users. Students will learn the essential components and function of hardware and software systems used in modern businesses as well as analysis techniques used in security operations centers. Courses in this certificate help prepare students for the CompTIA IT Fundamentals, CompTIA A+, LPI Linux Essentials, Cisco CyberOps Associate, and Microsoft Windows 10 industry certifications.
+=== Example Jobs
 
-*The Bottom Line:* This is a great option if you are unsure about your technical skills but are interested in getting into a computer career or continuing on towards a degree. This certificate can be completed in two semesters (one year) and will prepare you for several industry certifications, especially the CompTIA A+ which is required for many entry level IT positions and may be all you need to start working in IT. All of the credits in this certificate will count towards the AAS in Information Technology Support if you decide to continue towards a degree.
-====
+* Computer Network Architect
+* Computer Support Specialist
+* Computer Systems Analyst
+* Network and Computer System Administrators
+* Computer and Information Systems Manager
+* Information Security Analyst
 
-=== Certificate: IT System Administrator - 18 Credits
+== Computer Science and Programming
 
-.Find out more about this certificate
-[%collapsible]
-====
-*Official Description:* This certificate provides IT employees with knowledge and skills needed to administer Linux and Windows clients and servers. Courses in this certificate help prepare students for the Microsoft 365 Certified: Modern Desktop Administrator Associate, Microsoft Certified: Windows Server Hybrid Administrator Associate, and LPI Linux Essentials industry certifications.
+Computer Science is the study of computers and the algorithmic processes used by them and their software including the theory, principles, design, and applications. This field focuses primarily on the development of new software and algorithms to solve problems.
 
-*The Bottom Line:* This is a great option if you want to move from an entry level helpdesk position into a server administrator position where you will manage Windows or Linux servers. This certificate can be completed in two semesters (one year) if you already have helpdesk experience and will prepare you for several industry certifications. All of the credits in this certificate will count towards the AAS in Information Technology Support if you decide to continue towards a degree.
-====
+xref:degrees-certificates-cs.adoc[Find out about computer science and programming certificates and degrees here]
 
-=== AAS in Information Technology Support - 60 Credits
+=== Key Skills
 
-.Find out more about this degree
-[%collapsible]
-====
-*Official Description:* The Information Technology Support program trains workers for employment providing service to computer users, including hardware and software installation and technical assistance. Coursework includes experiences and instruction in communication and problem-solving skills, as well as technical training with hardware, software, operating systems, applications software, security, and computer network operations. Designed to prepare graduates to select, maintain, configure, and oversee installation of business-oriented personal computers, software, and to support and train users.  This program provides the student training for a variety of IT industry certifications including the CompTIA A+, Microsoft Windows Server Hybrid Administrator Associate, and Cisco Cyber Operations Associate.
+* Design and implement the algorithms in software to solve complex social and business problems
+* Write, test, and debug the code that powers the modern world from video games, to interactive websites, mobile apps, and business applications
+* Express your creativity and unlock the solutions to complex logic problems
+* Program in advanced languages such as C++, Java, HTML, JavaScript, Python, and PHP
 
-*The Bottom Line:* This degree is designed to prepare you for entry level IT support, system administration, networking, and cybersecurity positions. Starting from the very basics of IT you will learn the skills required to support users and business needs. This degree can be completed in four semesters (two years) and includes preparing you for many industry certifications including the CompTIA A+ which is required for many entry level IT positions.
+=== Example Jobs
 
-*The Big Bonus:* You will earn the IT Helpdesk and Cybersecurity Operations and IT System Administrator certificates (one each year) while you complete this degree so you will graduate with three credentials!
-
-*Continuing Your Education:* Inver Hills has relationships with multiple 4-year schools where you can transfer all your credits if you would like to continue on to a bachelor's degree program. You may also decide to double-major at IHCC and continue on to finish requirements for the AAS in Network Technology and Security to prepare you for more advanced IT positions.
-====
-
-=== Certificate: Networking and Cybersecruity Operations - 18 Credits
-
-.Find out more about this certificate
-[%collapsible]
-====
-*Official Description:* This certificate provides students with knowledge and skills essential to configuring, securing, and maintaining modern business networks and Internet connections. Centered around preparation for the Cisco Certified Network Associate industry credential this certificate bolsters confidence in small and medium sized business networks with courses about user facing network devices and security operations center skills. Courses in this certificate help prepare students for the CompTIA A+, Cisco Certified Network Associate, and Cisco CyberOps Associate industry certifications.
-
-*The Bottom Line:* This is a great option if you want to prepare for a network or security administrator position where you will manage routers, switches, and firewalls. This certificate can be completed in two semesters (one year) and will prepare you for several industry certifications, especially the CompTIA A+ which is required for many entry level IT positions and may be all you need to start working in IT and the Cisco Certified Network Associate (CCNA) which is the most widely recognized entry level network administration certification. All of the credits in this certificate will count towards the AAS in Network Technology and Security if you decide to continue towards a degree.
-====
-
-=== Certificate: Enterprise Networking - 18 Credits
-
-.Find out more about this certificate
-[%collapsible]
-====
-*Official Description:* This certificate provides students with knowledge and skills to configure and maintaining large enterprise networks and WAN connections. Centered around preparation for the Cisco Certified Network Associate and Cisco CCNP Enterprise industry credentials this certificate includes hands-on experience with EIGRP, OSPF, BGP, multicast, QoS, wireless, overlay networks, and network programmability. Courses in this certificate help prepare students for the Cisco Certified Network Associate, and CCNP Enterprise industry certifications.
-
-*The Bottom Line:* This is a great option if you want to prepare for a more advanced network administrator position where you will manage routers, switches, and firewalls at a large enterprise with advanced routing protocols and technologies. This certificate can be completed in two semesters (one year) if you have CCNA experience and will prepare you for the next level of several industry certification, namely the widely respected Cisco Certified Network Professional (CCNP) Enterprise Advanced Routing and Services. All of the credits in this certificate will count towards the AAS in Network Technology and Security if you decide to continue towards a degree.
-====
-
-=== AAS in Network Technology and Security - 60 Credits
-
-.Find out more about this degree
-[%collapsible]
-====
-*Official Description:* This program prepares students for rewarding careers in the dynamic field of computer networking and security. The continued growth of the Internet, wide area networks (WANs) and local area networks (LANs) requires people with the broad knowledge and skills needed to design, manage, secure, and troubleshoot sophisticated information storage, retrieval and presentation systems. The program covers the workings of networks and systems from desktop and mobile devices to cloud servers that could be located anywhere in the world. The curriculum has been designed to encompass many of the same competencies that are covered by several recognized IT industry certifications, for example CompTIA’s A+; Cisco’s CCNA, CCNP, and CyberOps Associate; and Microsoft’s Administering Windows Server Hybrid Core Infrastructure, so students will gain the knowledge and skills that are recognized as important for employment in the field. 
-
-*The Bottom Line:* This degree is designed to prepare you for network, system administration, and cybersecurity positions. You will build on a foundation of PC support to learn about more complex network design, server administration, and security concepts the very basics of IT you will learn the skills required to support users and business needs. This degree can be completed in four semesters (two years) and includes preparing you for many industry certifications including the CompTIA A+, Cisco Certified Network Associate (CCNA), Cisco Certified Network Professional (CCNP) Advanced Routing and Services, and more!
-
-*The Big Bonus:* You will earn the Networking and Cybersecruity Operations and Enterprise Networking certificates (one each year) while you complete this degree so you will graduate with three credentials!
-
-*Continuing Your Education:* Inver Hills has relationships with multiple 4-year schools where you can transfer all your credits if you would like to continue on to a bachelor's degree program. You may also decide to continue on to more advanced technical studies in networking and/or cybersecuirty at IHCC by finishing the requirements for one or more of our advanced certificates.
-====
-
-=== Certificate: Advanced Network Technology - 18-21 Credits
-
-.Find out more about this certificate
-[%collapsible]
-====
-*Official Description:* This certificate program provides an opportunity for IT professionals who have large enterprise network administration responsibilities or experience to learn about state-of-the-art networking concepts and configuration beyond that covered in the Network Technology and Security degree program. Courses cover network programmability, QoS, advanced BGP, advanced OSPF, advanced EIGRP, overlay networks, VPNs, wireless networking, and multicast. Courses in this certificate help prepare students for the Cisco DevNet Associate, CCNP Enterprise, and additional CCNP Enterprise concentration areas based on the student’s career path and interests.
-
-*The Bottom Line:* This is a great option if you want to move beyond traditional networking into the world of DevOps, network as code, and additional CCNP concentration areas such as SD-WAN, network design, enterprise wireless, or automation. These advanced networking technologies are in demand by the biggest companies. This certificate can be completed in one or two semesters (one half to one year) if you have CCNP Enterprise Advanced Routing and Services experience and will prepare you for the the Cisco DevNet Associate and another CCNP concentration.
-====
-
-=== Certificate: Advanced Cybersecurity Infrastructure - 18-21 Credits
-
-.Find out more about this certificate
-[%collapsible]
-====
-*Official Description:* This certificate program provides an opportunity for IT professionals who have network security and information assurance responsibilities or experience to learn about advanced cybersecurity concepts and configuration beyond that covered in the Network Technology and Security degree program. Courses cover industry standard topics including security incident management, firewalls, pen testing, VPNs, intrusion detection, and overall security policy and practices. Courses in this certificate help prepare students for the Cisco CyberOps Associate, EC-Council CEH, and other professional security certifications such as CCNP Security, CISSP, GSEC, CISM, or CISA based on the student’s career path and interests.
-
-*The Bottom Line:* This is a great option if you want to gain advanced experience in cybersecurity including penetration testing, network security device configuration, and security management. This certificate can be completed in one or two semesters (one half to one year) if you have basic security, networking, and systems administration experience and will prepare you for the the EC-Council CEH and at least one other professional security certification.
-====
-
-== Computer Science/Programming
-
-Computer programmers are responsible for designing and writing the software applications (apps) which are used on computers, phones, and webservers. Computer scientists are responsible for studying and designing the algorithms to do useful things with computers and to be implemented by computer programmers.
-
-=== AS Computer Science Transfer Pathway – 60 credits
-
-.Find out more about this degree
-[%collapsible]
-====
-*Official Description:* The Computer Science Transfer Pathway A.S. offers students a powerful option: the opportunity to complete an Associate of Science degree with course credits that directly transfer to designated Computer Science bachelor’s degree programs at Minnesota State universities. The curriculum has been specifically designed so that students completing the pathway degree and transferring to one of the seven Minnesota State Universities* enter the university with junior-year status. All courses in the Transfer Pathway associate degree will directly transfer and apply to the designated bachelor’s degree programs in a related field.
-
-The Computer Science Pathway consists of the Required Pathway Curriculum and select Minnesota Transfer Curriculum (MnTC) requirements to bring your credit total to 60 credits.
-
-*Universities within the Minnesota State system include Bemidji State University; Metropolitan State University; Minnesota State University, Mankato; Minnesota State University, Moorhead; Southwest Minnesota State University; St. Cloud State University; and Winona State University. 
-====
-
-=== AAS Computer Programmer – 60 credits
-
-.Find out more about this degree
-[%collapsible]
-====
-*Official Description:* Graduates of this program are well-prepared in software programming and software engineering abilities to help execute a wide variety of information technology projects. 
-====
+* Computer Programmer
+* Database Administrator
+* Software Application Developer
+* Software Engineer
+* Mobile App Developer
+* Web Developer
+* Computer Scientist
 
 include::program-info:ROOT:partial$stdfooter.adoc[]
