--- a/program-information/modules/ROOT/pages/degrees-certificates-it.adoc
+++ b/program-information/modules/ROOT/pages/degrees-certificates-it.adoc
@@ -1,11 +1,13 @@
 = Information Technology Infrastructure Degrees and Certificates
 
-IT infrastructure personnel are responsible for installing, configuring, operating, and maintaining PCs, servers, network devices, network links, and cybersecurity devices and software required for businesses to operate.
+Information Technology Infrastructure, commonly called IT, is the collection of careers which deal with selecting, installing, integrating, protecting, and maintaining the software and hardware which enables society, business, and the Internet as we know it. This field focuses primarily on the integration of multiple existing hardware and software systyems into a single cohesive design solution to complex problems.
+
+Inver Hills Community College offers a variety of certificates and degrees in the IT area. Depending on your previous experience and comfort with computers we have entry-level certificates and degrees, premier certificates and degrees, and advanced professional development certificates. You'll find descriptions of each of these and more information below.
 
 [TIP]
 .Credit for Professional Certifications
 ====
-Many of the classes in our degrees and certificates are aligned with professional industry certifications. If you already have one or more of these certifications you may be able to receive credit for courses. Review the xref:certification-credit.adoc[ITC Course Credit Equivalency for IT Exams] chart and then contact a faculty member for more information.
+Many of the classes in our IT degrees and certificates are aligned with professional industry certifications. If you already have one or more of these certifications you may be able to receive credit for courses. Review the xref:certification-credit.adoc[ITC Course Credit Equivalency for IT Exams] chart and then contact a faculty member for more information.
 ====
 
 [WARNING]
@@ -14,7 +16,40 @@ Many of the classes in our degrees and certificates are aligned with professiona
 Many of the courses in ITC degree programs have prerequisites which effectively limit the number of technical courses which can be take in any one semester. In order to ensure timely graduation, appropriate course loads, and the correct mix of technical and liberal arts courses students are strongly encouraged to meet with an academic advisor, counselor, and having that plan reviewed by a faculty member from the ITC department before registering for classes to determine a degree plan. You can also  xref:degree-course-sequencing.adoc[review a suggested course sequence online] to give you a starting point.
 ====
 
+== Premier Certificates and Degree
+
+If your friends and family regularly come to you for support with their computer and network issues, consider yourself a "power user" of computers already, or you are dedicated to learning new information about computers, networking, and security in a fast-paced environment our flagship degree in Network Technology and Security may be a good choice for you. Courses you will complete in the first year of this degree are many of the same courses found in the second year of our more entry-level IT Support degree.
+
+These are focued on being well prepared for a career as a network or systems administrator, security architect, and other technically focused IT infrastructure positions at any size enterprise.
+
+=== Certificate: Networking and Cybersecruity Operations - 18 Credits
+
+*Official Description:* This certificate provides students with knowledge and skills essential to configuring, securing, and maintaining modern business networks and Internet connections. Centered around preparation for the Cisco Certified Network Associate industry credential this certificate bolsters confidence in small and medium sized business networks with courses about user facing network devices and security operations center skills. Courses in this certificate help prepare students for the CompTIA A+, Cisco Certified Network Associate, and Cisco CyberOps Associate industry certifications.
+
+*The Bottom Line:* This is a great option if you want to prepare for a network or security administrator position where you will manage routers, switches, and firewalls. This certificate can be completed in two semesters (one year) and will prepare you for several industry certifications, especially the CompTIA A+ which is required for many entry level IT positions and may be all you need to start working in IT and the Cisco Certified Network Associate (CCNA) which is the most widely recognized entry level network administration certification. All of the credits in this certificate will count towards the AAS in Network Technology and Security if you decide to continue towards a degree.
+
+=== Certificate: Enterprise Networking - 18 Credits
+
+*Official Description:* This certificate provides students with knowledge and skills to configure and maintaining large enterprise networks and WAN connections. Centered around preparation for the Cisco Certified Network Associate and Cisco CCNP Enterprise industry credentials this certificate includes hands-on experience with EIGRP, OSPF, BGP, multicast, QoS, wireless, overlay networks, and network programmability. Courses in this certificate help prepare students for the Cisco Certified Network Associate, and CCNP Enterprise industry certifications.
+
+*The Bottom Line:* This is a great option if you want to prepare for a more advanced network administrator position where you will manage routers, switches, and firewalls at a large enterprise with advanced routing protocols and technologies. This certificate can be completed in two semesters (one year) if you have CCNA experience and will prepare you for the next level of several industry certification, namely the widely respected Cisco Certified Network Professional (CCNP) Enterprise Advanced Routing and Services. All of the credits in this certificate will count towards the AAS in Network Technology and Security if you decide to continue towards a degree.
+
+=== AAS in Network Technology and Security - 60 Credits
+
+*Official Description:* This program prepares students for rewarding careers in the dynamic field of computer networking and security. The continued growth of the Internet, wide area networks (WANs) and local area networks (LANs) requires people with the broad knowledge and skills needed to design, manage, secure, and troubleshoot sophisticated information storage, retrieval and presentation systems. The program covers the workings of networks and systems from desktop and mobile devices to cloud servers that could be located anywhere in the world. The curriculum has been designed to encompass many of the same competencies that are covered by several recognized IT industry certifications, for example CompTIA’s A+; Cisco’s CCNA, CCNP, and CyberOps Associate; and Microsoft’s Administering Windows Server Hybrid Core Infrastructure, so students will gain the knowledge and skills that are recognized as important for employment in the field. 
+
+*The Bottom Line:* This degree is designed to prepare you for network, system administration, and cybersecurity positions. You will build on a foundation of PC support to learn about more complex network design, server administration, and security concepts the very basics of IT you will learn the skills required to support users and business needs. This degree can be completed in four semesters (two years) and includes preparing you for many industry certifications including the CompTIA A+, Cisco Certified Network Associate (CCNA), Cisco Certified Network Professional (CCNP) Advanced Routing and Services, and more!
+
+*The Big Bonus:* You will earn the Networking and Cybersecruity Operations and Enterprise Networking certificates (one each year) while you complete this degree so you will graduate with three credentials!
+
+*Continuing Your Education:* Inver Hills has relationships with multiple 4-year schools where you can transfer all your credits if you would like to continue on to a bachelor's degree program. You may also decide to continue on to more advanced technical studies in networking and/or cybersecuirty at IHCC by finishing the requirements for one or more of our advanced certificates which are described below.
+
 == Entry Level Certificates and Degree
+
+If you are interested in getting into a career in IT but are a more typical computer user, or want to learn new things about computers, networks, servers, and security at a slower pace with more introductory information our entry level degree in IT Support may be a good choice for you. Courses you will complete in the second year of this degree are many of the same courses found in the first year of our flagship Network Technology and Security degree.
+
+These are focued on being well prepared for a career as an IT Support, helpdesk, junior network or systems administrator, or security event analyst positions. System administration, network, and security content in this degree is geared more towards smaller companies with less complex infrastructure.
+
 
 === Certificate: IT Helpdesk and Cybersecurity Operations - 18 Credits
 
@@ -38,29 +73,9 @@ Many of the courses in ITC degree programs have prerequisites which effectively 
 
 *Continuing Your Education:* Inver Hills has relationships with multiple 4-year schools where you can transfer all your credits if you would like to continue on to a bachelor's degree program. You may also decide to double-major at IHCC and continue on to finish requirements for the AAS in Network Technology and Security to prepare you for more advanced IT positions.
 
-== Premier Certificates and Degree
+== Advanced Certificates
 
-=== Certificate: Networking and Cybersecruity Operations - 18 Credits
-
-*Official Description:* This certificate provides students with knowledge and skills essential to configuring, securing, and maintaining modern business networks and Internet connections. Centered around preparation for the Cisco Certified Network Associate industry credential this certificate bolsters confidence in small and medium sized business networks with courses about user facing network devices and security operations center skills. Courses in this certificate help prepare students for the CompTIA A+, Cisco Certified Network Associate, and Cisco CyberOps Associate industry certifications.
-
-*The Bottom Line:* This is a great option if you want to prepare for a network or security administrator position where you will manage routers, switches, and firewalls. This certificate can be completed in two semesters (one year) and will prepare you for several industry certifications, especially the CompTIA A+ which is required for many entry level IT positions and may be all you need to start working in IT and the Cisco Certified Network Associate (CCNA) which is the most widely recognized entry level network administration certification. All of the credits in this certificate will count towards the AAS in Network Technology and Security if you decide to continue towards a degree.
-
-=== Certificate: Enterprise Networking - 18 Credits
-
-*Official Description:* This certificate provides students with knowledge and skills to configure and maintaining large enterprise networks and WAN connections. Centered around preparation for the Cisco Certified Network Associate and Cisco CCNP Enterprise industry credentials this certificate includes hands-on experience with EIGRP, OSPF, BGP, multicast, QoS, wireless, overlay networks, and network programmability. Courses in this certificate help prepare students for the Cisco Certified Network Associate, and CCNP Enterprise industry certifications.
-
-*The Bottom Line:* This is a great option if you want to prepare for a more advanced network administrator position where you will manage routers, switches, and firewalls at a large enterprise with advanced routing protocols and technologies. This certificate can be completed in two semesters (one year) if you have CCNA experience and will prepare you for the next level of several industry certification, namely the widely respected Cisco Certified Network Professional (CCNP) Enterprise Advanced Routing and Services. All of the credits in this certificate will count towards the AAS in Network Technology and Security if you decide to continue towards a degree.
-
-=== AAS in Network Technology and Security - 60 Credits
-
-*Official Description:* This program prepares students for rewarding careers in the dynamic field of computer networking and security. The continued growth of the Internet, wide area networks (WANs) and local area networks (LANs) requires people with the broad knowledge and skills needed to design, manage, secure, and troubleshoot sophisticated information storage, retrieval and presentation systems. The program covers the workings of networks and systems from desktop and mobile devices to cloud servers that could be located anywhere in the world. The curriculum has been designed to encompass many of the same competencies that are covered by several recognized IT industry certifications, for example CompTIA’s A+; Cisco’s CCNA, CCNP, and CyberOps Associate; and Microsoft’s Administering Windows Server Hybrid Core Infrastructure, so students will gain the knowledge and skills that are recognized as important for employment in the field. 
-
-*The Bottom Line:* This degree is designed to prepare you for network, system administration, and cybersecurity positions. You will build on a foundation of PC support to learn about more complex network design, server administration, and security concepts the very basics of IT you will learn the skills required to support users and business needs. This degree can be completed in four semesters (two years) and includes preparing you for many industry certifications including the CompTIA A+, Cisco Certified Network Associate (CCNA), Cisco Certified Network Professional (CCNP) Advanced Routing and Services, and more!
-
-*The Big Bonus:* You will earn the Networking and Cybersecruity Operations and Enterprise Networking certificates (one each year) while you complete this degree so you will graduate with three credentials!
-
-*Continuing Your Education:* Inver Hills has relationships with multiple 4-year schools where you can transfer all your credits if you would like to continue on to a bachelor's degree program. You may also decide to continue on to more advanced technical studies in networking and/or cybersecuirty at IHCC by finishing the requirements for one or more of our advanced certificates.
+If you are interested in advancing your IT career with in depth study of advanced networking or security concepts our advanced certificates in networking or cybersecurity provide great options. These are designed for either professionals working in the field looking for professional technical development or students who have completed our Networking and Security degree who want to specialize further in either networking or cybersecurity with advanced certifications.
 
 === Certificate: Advanced Network Technology - 18-21 Credits
 
