--- a/franske-course-information/modules/itc-2480/pages/assignments.adoc
+++ b/franske-course-information/modules/itc-2480/pages/assignments.adoc
@@ -17,6 +17,4 @@ You will take a comprehensive online exam on the ITC CLASS Server which includes
 == Skills Based Final Exam
 The Skills Final Exam is designed to test your ability to apply the concepts learned in this class and practiced in labs to common, real-world scenarios. You will start with an empty virtual machine and need to install Linux as well as perform many of the tasks practiced in lab acitivites though in slightly different ways or with different settings.
 
-[%hardbreaks]
-Document Build Time: {localdatetime}
-Page Version: {page-component-version}
+include::program-info:ROOT:partial$stdfooter.adoc[]
