--- a/program-information/modules/ROOT/navtop.adoc
+++ b/program-information/modules/ROOT/navtop.adoc
@@ -6,3 +6,4 @@ include::partial$nav.adoc[]
 * xref:franske-courses:ROOT:index.adoc[Dr. Franske's Course Pages]
 * xref:tech-info:ROOT:index.adoc[Technical Information]
 * xref:software-info:ROOT:index.adoc[Software Discounts and Resources]
+* xref:tech-info:ROOT:about-site.adoc[About This Site]
