--- a/franske-course-information/modules/itc-2516/pages/assignments.adoc
+++ b/franske-course-information/modules/itc-2516/pages/assignments.adoc
@@ -159,8 +159,14 @@ For each chapter having lab activities you will need to submit one lab report wh
 *** <pre>R2(config)# ip route 0.0.0.0 0.0.0.0 10.0.0.1</pre>
 . Lab 8.5.1 - Configure DHCPv6
 * NOTE: In Part 1, Step 4b this lab asks you to configure a default route on each router pointed towards the other router. We haven't learned how to configure default routes yet though so you can run the following configuration commands (one on R1 and one on R2) to fix this.
-** <pre>R1(config)# ipv6 route ::/0 2001:db8:acad:2::2</pre>
-** <pre>R2(config)# ipv6 route ::/0 2001:db8:acad:2::1</pre>
++
+----
+R1(config)# ipv6 route ::/0 2001:db8:acad:2::2
+----
+----
+R2(config)# ipv6 route ::/0 2001:db8:acad:2::1
+----
++
 . Lab 11.6.2 - Switch Security Configuration
 . Lab 13.1.11 - Configure a Wireless Network
 * *FALL 2021 NOTE:* Complete the Packet Tracer version of this lab this year, wireless networking is not supported on Netlab. You should still submit a lab report as normal for this PT lab.
